--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.act</groupId>
     <artifactId>shilen-money-transfer-api</artifactId>
-    <version>1.0.-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>shilen-money-transfer-api</name>
     <description>A money transfer api that lets registered user to trasfer and receive money between two accounts.
     </description>
